--- a/api/.env.example
+++ b/api/.env.example
@@ -2,6 +2,13 @@
 # CONFIGURAÇÃO DO AMBIENTE - SOU ESPORTE API
 # ===========================================
 # Copie este arquivo para .env e preencha os valores
+#
+# INSTRUÇÕES RÁPIDAS:
+# 1. cp .env.example .env
+# 2. Descubra seu IP: ipconfig getifaddr en0 (Mac)
+# 3. Substitua SEU_IP pelo IP encontrado
+# 4. Inicie: npm run dev
+# ===========================================
 
 # ===========================================
 # BANCO DE DADOS
@@ -58,8 +65,19 @@ AWS_REGION=us-east-1
 AWS_S3_BUCKET=souesporte-uploads
 
 # ===========================================
-# EMAIL
+# EMAIL / SMTP (OBRIGATÓRIO para verificação)
 # ===========================================
+# Configuração SMTP para envio de emails de verificação
+# Sem isso, o registro de novos usuários não funcionará!
+
+SMTP_HOST=dedi-13565186.ilutas.com.br
+SMTP_PORT=465
+SMTP_USER=no-reply@souesporte.com.br
+SMTP_PASS=0102030405Gm$
+SMTP_FROM_NAME=Sou Esporte
+SMTP_FROM_EMAIL=no-reply@souesporte.com.br
+
+# Alternativa: SendGrid (opcional)
 SENDGRID_API_KEY=
 EMAIL_FROM=noreply@souesporte.com
 
