fix: add video URL validation to prevent local file:// URLs from breaking player
- Add isValidVideoUrl() helper function to validate HTTP/HTTPS URLs only
- Filter out invalid video URLs (file://, ph://, content://) before rendering
- Show image fallback when video URL is invalid
- Add SQL diagnostic script for video URL issues
- Prevents black screen/error when videos have local device URLs

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -13,10 +13,14 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
+      "bundleIdentifier": "com.souesporte.mobile",
       "supportsTablet": true,
       "requireFullScreen": false,
       "infoPlist": {
         "UISupportedInterfaceOrientations": [
+          "UIInterfaceOrientationPortrait",
+          "UIInterfaceOrientationLandscapeLeft",
+          "UIInterfaceOrientationLandscapeRight",
           "UIInterfaceOrientationPortrait",
           "UIInterfaceOrientationLandscapeLeft",
           "UIInterfaceOrientationLandscapeRight"
@@ -25,8 +29,13 @@
           "UIInterfaceOrientationPortrait",
           "UIInterfaceOrientationPortraitUpsideDown",
           "UIInterfaceOrientationLandscapeLeft",
+          "UIInterfaceOrientationLandscapeRight",
+          "UIInterfaceOrientationPortrait",
+          "UIInterfaceOrientationPortraitUpsideDown",
+          "UIInterfaceOrientationLandscapeLeft",
           "UIInterfaceOrientationLandscapeRight"
-        ]
+        ],
+        "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
@@ -49,6 +58,12 @@
     ],
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "6ddbd7d7-6f18-445c-b89c-9356781a9839"
+      }
+    },
+    "owner": "miltongustavo"
   }
 }
