RESTORE: Restaurar para estado inicial funcional (7583439)
- Restaurado para Initial Import (API + Mobile + Database)
- Desabilitado newArchEnabled para prevenir erro boolean/string
- Estado completo e funcional do app

--- a/mobile/.env.example
+++ b/mobile/.env.example
@@ -1,24 +1,9 @@
-# ===========================================
-# SOU ESPORTE - MOBILE ENVIRONMENT CONFIG
-# ===========================================
-# 
-# INSTRUÇÕES:
-# 1. Copie este arquivo para .env:
-#    cp .env.example .env
-#
-# 2. Descubra o IP do seu Mac/PC na rede local:
-#    Mac:     ipconfig getifaddr en0
-#    Windows: ipconfig | findstr IPv4
-#    Linux:   hostname -I | awk '{print $1}'
-#
-# 3. Edite o .env e substitua SEU_IP pelo IP encontrado
-#
-# Exemplo: Se seu IP for 192.168.0.14, use:
-#   EXPO_PUBLIC_API_URL=http://192.168.0.14:3000
-#
-# IMPORTANTE: O IP deve ser o mesmo configurado no backend (api/.env)
-# ===========================================
+# Sou Esporte - Configuração de Ambiente
+# Copie este arquivo para .env e altere o IP conforme necessário
 
-# URL da API Backend (OBRIGATÓRIO)
-# Altere SEU_IP para o IP real do seu computador
-EXPO_PUBLIC_API_URL=http://SEU_IP:3000
+# URL da API - altere para o IP do seu computador na rede local
+# Para descobrir seu IP no Mac: ipconfig getifaddr en0
+# Para descobrir seu IP no Linux: hostname -I | awk '{print $1}'
+# Para descobrir seu IP no Windows: ipconfig (procure IPv4 Address)
+
+EXPO_PUBLIC_API_URL=http://192.168.0.14:3000
