--- a/mobile/app.json
+++ b/mobile/app.json
@@ -44,7 +44,8 @@
           "initialOrientation": "DEFAULT"
         }
       ],
-      "expo-video"
+      "expo-video",
+      "expo-font"
     ],
     "web": {
       "favicon": "./assets/favicon.png"
