--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,12 +16,13 @@
     "@react-navigation/bottom-tabs": "^7.9.1",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
-    "expo": "~54.0.31",
+    "expo": "~54.0.32",
     "expo-av": "^16.0.8",
     "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.13",
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
+    "expo-font": "~14.0.11",
     "expo-image-manipulator": "^14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "^15.0.8",
@@ -35,13 +36,14 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-image-filter-kit": "^0.8.0",
-    "react-native-reanimated": "^3.10.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
